Added Swagger Annotations And Rewrote Service Layer Code Using Pre Java 8 Features